# skat_engine_rs

./: Cargo.toml  README.md
crates/skat_engine_cli/: Cargo.toml
crates/skat_engine_cli/src/: main.rs
crates/skat_engine_cli/src/utils/: deal.rs  mod.rs
crates/skat_engine_cli/tools/deal/: args.rs  bin.rs  main.rs
src/: card.rs  hand.rs  lib.rs  rank.rs  rules.rs  suit.rs  trick.rs
src/bot/: grand.rs  mod.rs  null.rs  suit.rs
src/game/: grand.rs  mod.rs  null.rs  suit.rs  value.rs
src/state/: bidding.rs  game.rs  mod.rs  player.rs
src/utils/: deal.rs  deck.rs  mod.rs
tools/: deal.rs
