[package]
name = "skat_engine_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deal"
path = "tools/deal/bin.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
skat_engine = { path = "../../" }
rand = { version = "0.10.1", features = ["thread_rng"] }
