[package]
name = "skat_engine_cli"
version = "0.1.0"
edition = "2024"
default-run = "skat_engine_cli"

[[bin]]
name = "deal"
path = "tools/deal/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
skat_engine = { path = "../../" }
rand = { version = "0.10.1", features = ["thread_rng"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
